# torch-lattice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.artifacts/: classifier-intermediates.safetensors
.artifacts/key-check/: graph.mlir  weights.safetensors
.artifacts/production-smoke/: manifest.json
.artifacts/production-smoke/0000_sparse_classifier_7c00b06f/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0001_sparse_feature_chain_59254c5c/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0002_sparse_branch_6c3184bb/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0003_target_branch_0a69c763/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0004_transpose_chain_682b5386/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0005_generative_transpose_47811358/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0006_point_voxel_1d91c25c/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.artifacts/production-smoke/0007_quantized_classifier_31147551/: case.json  expected.safetensors  graph.mlir  inputs.safetensors  weights.safetensors
.github/workflows/: cuda-linux.yml  docs.yml
benchmarks/: README.md  pyproject.toml  sparse_ops_benchmark.py
benchmarks/torch_lattice_bench/: __main__.py  catalog.py  console.py  datasets.py  harness.py  report.py  run.py
benchmarks/torch_lattice_bench/cases/: __init__.py  common.py  conv.py  dense.py  hash.py  kmap.py  nn.py  tensor.py  train.py
conformance/: pyproject.toml
conformance/torch_lattice_conformance/: checkpoint.py  cli.py  e2e.py  generate.py  migration.py
docs/: FAQ.md  conf.py  index.rst
docs/api/: artifact.rst  core.rst  functional.rst  index.rst  nn.rst  ops.rst  tooling.rst
docs/api/artifact/: builder.rst  fx.rst  index.rst  io.rst  weights.rst
docs/api/core/: backend-flags.rst  coordinate-management.rst  index.rst  sparse-tensor.rst  top-level.rst
docs/api/functional/: activation.rst  convolution-config.rst  convolution.rst  coordinate-hash.rst  coordinate-query.rst  count.rst  crop.rst  dense-conversion.rst  index.rst  pooling.rst  relations.rst  top-level.rst  voxelization.rst
docs/api/nn/: activation.rst  bev.rst  convolution.rst  crop.rst  index.rst  normalization.rst  pooling.rst  top-level.rst  utilities.rst
docs/api/ops/: index.rst  quantization.rst  sparse-operators.rst  tuning.rst
docs/api/tooling/: benchmarks.rst  conformance.rst  index.rst
docs/getting-started/: index.rst  installation.rst  quickstart.rst  workflow.rst
docs/project/: compatibility.rst  stability.rst  troubleshooting.rst
docs/reference/concepts/: artifacts.rst  convolution-semantics.rst  index.rst  migration.rst  numerics.rst  sparse-tensor.rst
docs/reference/tooling/: benchmarks.rst  conformance.rst  cuda-ci.rst  index.rst
examples/: backbones.py  converter.py  example.py  export_tiny_lattice_artifact.py  performance.py  save_tiny_lattice_artifact.py
examples/mmdetection3d/: demo.ipynb
examples/mmdetection3d/ts_plugin/: __init__.py
examples/openpcdet/: converter_voxelnext.py  demo.ipynb  setup.py
native/convolution/: convolution_backward_wgrad_implicit_gemm_cuda.cu  convolution_backward_wgrad_implicit_gemm_sorted_cuda.cu  convolution_forward_fetch_on_demand_cuda.cu  convolution_forward_implicit_gemm_cuda.cu  convolution_forward_implicit_gemm_sorted_cuda.cu  convolution_gather_scatter_cuda.cu
native/devoxelize/: devoxelize_cuda.cu
native/hash/: hash_cpu.cpp  hash_cuda.cu
native/hashmap/: hashmap_cpu.cpp  hashmap_cuda.cuh
native/others/: query_cpu.cpp  query_cuda.cu  sparsemapping_cuda.cu
native/voxelize/: voxelize_cuda.cu
tests/: conftest.py  support.py  test.py
tests/artifact/: test_lattice_artifact.py  test_lattice_feature_gaps.py  test_normalized_convolution_artifact.py  test_pool_transpose_artifact.py
tests/benchmarks/: test_benchmark_suite.py
tests/cases/: algebra_cases.py  dense_reference.py  types.py
tests/conformance/: test_checkpoint.py  test_lattice_fuzz_fixtures.py
tests/core/: test_coordinates.py  test_kernel_maps.py  test_tensor.py
tests/nn/: test_gameleon_reproduction.py  test_modules.py  test_pool_transpose.py  test_sparse_modules.py  test_tune.py
tests/ops/: test_conv.py  test_dense.py  test_feature.py  test_normalized_conv.py  test_sparse_algebra.py
tests/python/: __init__.py  test_benchmark_suite.py  test_coordinate_format.py  test_export_lattice_artifact.py  test_lattice_artifact.py  test_lattice_feature_gaps.py  test_lattice_fuzz_fixtures.py  test_single_layer_conv.py  test_to_dense.py  test_tune.py  test_utils.py
tools/: build_lattice_e2e_fixtures.py  build_lattice_fuzz_fixtures.py  export_lattice_e2e_fixtures.py
torch_lattice/: __init__.py  backend.py  backends.py  operators.py  tensor.py
torch_lattice/artifact/: __init__.py  builder.py  fx.py  io.py  weights.py
torch_lattice/backbones/: __init__.py  resnet.py  unet.py
torch_lattice/backbones/modules/: __init__.py  blocks.py
torch_lattice/backend/convolution/: convolution_gather_scatter_cuda.cu
torch_lattice/backend/hash/: hash_cpu.cpp
torch_lattice/backend/others/: downsample_cuda.h  sparsemapping_cuda.cu
torch_lattice/backend/voxelize/: voxelize_cuda.cu
torch_lattice/core/: __init__.py  coords.py
torch_lattice/export/: __init__.py  artifact.py  builder.py  fx.py
torch_lattice/nn/: __init__.py
torch_lattice/nn/functional/: __init__.py  activation.py  count.py  crop.py  devoxelize.py  hash.py  pooling.py  query.py  relation.py  voxelize.py
torch_lattice/utils/: __init__.py  collate.py  quantize.py  to_dense.py  tune.py  utils.py
torchsparse/: operators.py
torchsparse/backend/: pybind_cuda.cu
torchsparse/utils/: tune.py
(+62 files in other folders)
