[project]
name = "torch-lattice"
version = "0.0.0"
description = "Sparse convolution library for modern PyTorch and CUDA."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "MIT HAN Lab" },
]
dependencies = [
    "lattice-contract>=0.2.3",
    "numpy>=2.4",
    "safetensors>=0.8.0",
    "torch==2.11.0+cu128",
    "tqdm>=4.67",
    "typing-extensions>=4.15",
]

[project.urls]
Homepage = "https://github.com/caelyreth/torch-lattice"
Documentation = "https://github.com/caelyreth/torch-lattice/tree/main/docs"

[project.optional-dependencies]
test = [
    "pytest>=9.0",
]

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.12.0",
    "sphinx-copybutton>=0.5.2",
]

[build-system]
requires = [
    "scikit-build-core>=0.11",
    "numpy>=2.4",
    "torch==2.11.0+cu128",
]
build-backend = "scikit_build_core.build"

[tool.uv]
required-version = ">=0.11.25"

[tool.uv.workspace]
members = ["benchmarks", "conformance"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torch-lattice = { workspace = true }
torch-lattice-benchmarks = { workspace = true }
torch-lattice-conformance = { workspace = true }

[tool.scikit-build]
wheel.packages = ["torch_lattice"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "89"
CMAKE_CUDA_COMPILER = "/usr/local/cuda-12.8/bin/nvcc"
CUDAToolkit_ROOT = "/usr/local/cuda-12.8"

[tool.yapf]
based_on_style = "google"
spaces_around_power_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
split_before_bitwise_operator = true

[tool.isort]
known_first_party = ["torch_lattice", "torch_lattice_bench", "torch_lattice_conformance"]

[tool.pydocstyle]
convention = "google"

[tool.flake8]
select = ["B", "C", "D", "E", "F", "P", "T4", "W", "B9"]
ignore = ["D10", "E501", "E722", "W503"]
per-file-ignores = [
    "__init__.py:F401,F403",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
