[project]
name = "torch-lattice-conformance"
version = "0.3.0"
description = "Cross-runtime fixture generation and migration conformance tools for torch-lattice"
requires-python = ">=3.14"
dependencies = [
    "torch-lattice",
]

[project.scripts]
conformance = "torch_lattice_conformance.cli:main"
fuzz = "torch_lattice_conformance.generate:main"
e2e-fixtures = "torch_lattice_conformance.e2e:main"
migration = "torch_lattice_conformance.migration:main"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch-lattice = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["torch_lattice_conformance"]
